# osml-models

./: .buildinfo  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  NOTICE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js  setup.cfg  tox.ini
.github/workflows/: build-test-destroy.yml  build.yml  check-pending-workflow.yml  deploy.yml  destroy.yml  docker.yml  docs.yml  pre-commit.yml  pypi.yml  release.yml  run-integration-tests.yml  slack-notify-nightly-failure.yml  slack-notify.yml  tox.yml
_apidoc/: aws.osml.html  aws.osml.models.aircraft.app.html  aws.osml.models.aircraft.html  aws.osml.models.centerpoint.app.html  aws.osml.models.centerpoint.html  aws.osml.models.flood.app.html  aws.osml.models.flood.html  aws.osml.models.html  aws.osml.models.server_utils.html
_modules/: index.html
assets/: ship_model_weights.pth
autoapi/: index.html
autoapi/models/: index.html
cdk/: .gitignore  README.md  cdk.json  eslint.config.mjs  jest.config.js  package-lock.json  package.json  tsconfig.json
cdk/lib/: integration-test-stack.ts  model-endpoint-stack.ts  network-stack.ts
cdk/test/: app.test.ts  container.test.ts  integration-test-stack.test.ts  load-deployment.test.ts  model-endpoint-stack.test.ts  network-stack.test.ts  sagemaker-endpoint.test.ts  (+2 more)
conda/: environment-py310.yml  environment-sam3.yml
docker/: Dockerfile  Dockerfile.integ  Dockerfile.sam3
scripts/: destroy.sh  ecr_push.sh  model_endpoint_integ.sh
test/: integ_processor.py  processor_base.py
training/: README.md  SMTrainingSample.ipynb
(+54 files in other folders)
