[metadata]
name = osml-models
version = 1.3.0
description = A set of demonstration models to test OSML with.
long_description = file: README.md
long_description_content_type = text/markdown
author = Amazon Web Services
author_email = aws-osml-admin@amazon.com
license = Apache-2.0
project_urls =
    Source = https://github.com/awslabs/osml-models
    Tracker = https://github.com/awslabs/osml-models/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
zip_safe = False
package_dir=
    =src
packages=find_namespace:
python_requires = >=3.9
include_package_data = True

install_requires =
    json-logging==1.3.0
    boto3==1.34.104
    setuptools==68.0.0
    argparse==1.4.0
    flask==2.3.3
    waitress==2.1.2
    shapely==2.0.1
    matplotlib==3.7.2

[options.packages.find]
where = src
exclude =
    test

[options.package_data]
package_data =
    = ["py.typed"]

[options.extras_require]
gdal =
    gdal>=3.7.0
test =
    tox
